--- a/angular-frontend/src/app/explore-container/explore-container.component.html
+++ b/angular-frontend/src/app/explore-container/explore-container.component.html
@@ -9,11 +9,12 @@
     <ion-row>
       <!-- Three.js Canvas on the left side -->
       <ion-col size="6">
-        <div
-          id="threejs-container"
-          #threejsContainer
-          style="width: 100%; height: 500px"
-        ></div>
+        <app-threejs
+          [adjustTHREERobotHeightValue]="adjustTHREERobotHeightValue"
+          [updateTHREERobotTiltValue]="updateTHREERobotTiltValue"
+          [updateTHREERobotMotorPWMValue]="updateTHREERobotMotorPWMValue"
+          [updateTHREERobotWheelMovementValue]="updateTHREERobotWheelMovementValue"
+        ></app-threejs>
       </ion-col>
 
       <ion-col size="6">
@@ -27,11 +28,11 @@
           [isSensorAdjustmentEnabled]="isSensorAdjustmentEnabled"
           (heightChanged)="onHeightChanged($event)"
           (sensorToggled)="onSensorToggled($event)"
-          
+
           (KpChanged)="updateKp($event)"
           (KiChanged)="updateKi($event)"
           (KdChanged)="updateKd($event)"
-          
+
           (degreeChanged)="updateIncrementDegree($event)"
           (stopCommand)="onStopCommand()"
           (controlCommand)="sendControlCommand($event)"
@@ -50,9 +51,9 @@
           [rightServoPulse]="rightServoPulse"
         ></app-motor-output>
 
-        <app-console 
+        <app-console
         [isConsoleAutoScrollEnabled]="isConsoleAutoScrollEnabled"></app-console>
-      
+
       </ion-col>
     </ion-row>
   </ion-grid>
