--- a/angular-frontend/src/app/explore-container/explore-container.component.html
+++ b/angular-frontend/src/app/explore-container/explore-container.component.html
@@ -34,7 +34,7 @@
           (heightChanged)="onHeightChanged($event)"
           (sensorToggled)="onSensorToggled($event)"
           (stopCommand)="onStopCommand()"
-          (controlCommand)="sendControlCommand($event)"
+          (walkCommand)="onWalkCommand($event)"
         ></app-control> 
        
 
