Servo and Motor commands

--- a/angular-frontend/src/app/explore-container/explore-container.component.html
+++ b/angular-frontend/src/app/explore-container/explore-container.component.html
@@ -35,6 +35,11 @@
           (sensorToggled)="onSensorToggled($event)"
           (stopCommand)="onStopCommand()"
           (walkCommand)="onWalkCommand($event)"
+
+          servoLeftChanged="onServoLeftChanged($event)"
+          servoRightChanged="onServoRightChanged($event)"
+          motorLeftChanged="onMotorLeftChanged($event)"
+          motorRightChanged="onMotorRightChanged($event)"
         ></app-control> 
        
 
