--- a/angular-frontend/src/app/explore-container/explore-container.component.html
+++ b/angular-frontend/src/app/explore-container/explore-container.component.html
@@ -34,6 +34,7 @@
           (heightChanged)="onHeightChanged($event)"
           (sensorToggled)="onSensorToggled($event)"
           (stopCommand)="onStopCommand()"
+          (startCommand)="onStartCommand()"
           (walkCommand)="onWalkCommand($event)"
 
           (servoLeftChanged)="onServoLeftChanged($event)"
